--- a/deliverables/ocata/neutron-lbaas.yaml
+++ b/deliverables/ocata/neutron-lbaas.yaml
@@ -29,3 +29,12 @@ releases:
     projects:
       - repo: openstack/neutron-lbaas
         hash: 4876dcccbf8571dda461edaca442f2ccc412cd3b
+  - version: 10.0.1
+    projects:
+      - repo: openstack/neutron-lbaas
+        hash: 674e3604a6285655f2dc7f2949629cc4de06bbf4
+    highlights: |-
+      * Updates for devstack changes
+      * Updates for tempest changes
+      * Updates for neutron changes
+      * Fix for missing auth tokens on requests without a body
