Cut new release of tripleo-image-elements
It provides the new elements for security hardened images.

Change-Id: I1c08a041f8061b6fac3360215c5ca50618874322

--- a/deliverables/pike/tripleo-image-elements.yaml
+++ b/deliverables/pike/tripleo-image-elements.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 683256d1f9894c062a9055beaddcf89b64ccbe5f
     repo: openstack/tripleo-image-elements
   version: 7.0.0.0b1
+- projects:
+  - hash: 401d86195038abd6cc4d95d89b7fcc41c4fe6f2f
+    repo: openstack/tripleo-image-elements
+  version: 7.0.0.0b2
 team: tripleo
 type: other
