--- a/deliverables/pike/puppet-aodh.yaml
+++ b/deliverables/pike/puppet-aodh.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 18b75c43fc8c30b715cecf8cd46607dea8cdbbb4
     repo: openstack/puppet-aodh
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-aodh
+    hash: 01e5448ab6853d7a12927683f327369237706444
 team: Puppet OpenStack
 type: other
