--- a/deliverables/pike/puppet-barbican.yaml
+++ b/deliverables/pike/puppet-barbican.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: a81abcc5c458dfdb3e483b8626c8a28eaac7d20e
     repo: openstack/puppet-barbican
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-barbican
+    hash: 3920930183e293735a33c5c92aa12aa233c638c6
 team: Puppet OpenStack
 type: other
