--- a/deliverables/pike/puppet-ceilometer.yaml
+++ b/deliverables/pike/puppet-ceilometer.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: bd1ebe015f8c6819e5aaf4d9bd549de1ed556999
     repo: openstack/puppet-ceilometer
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-ceilometer
+    hash: ea0272ff35660c6fafe7ea97f15d77c46ecad180
 team: Puppet OpenStack
 type: other
