--- a/deliverables/pike/puppet-cinder.yaml
+++ b/deliverables/pike/puppet-cinder.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 219ea60a20acbdde9bc3f2503302871270951bb0
     repo: openstack/puppet-cinder
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-cinder
+    hash: 257519db52de13a036e4b5ba81216ca74a17d9ed
 team: Puppet OpenStack
 type: other
