--- a/deliverables/pike/puppet-designate.yaml
+++ b/deliverables/pike/puppet-designate.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: bd183e0619a1b69e0160f5eb48f7257566b3523a
     repo: openstack/puppet-designate
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-designate
+    hash: 1c8b37123c3335f3a2070488c483d1a9c69a68f9
 team: Puppet OpenStack
 type: other
