--- a/deliverables/pike/puppet-ec2api.yaml
+++ b/deliverables/pike/puppet-ec2api.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 02bacd26b2eea28749a241b75a75d71e754f0e54
     repo: openstack/puppet-ec2api
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-ec2api
+    hash: 4e7edbb45dc295b8130cd7c432bc6c6eec52e273
 team: Puppet OpenStack
 type: other
