--- a/deliverables/pike/puppet-glance.yaml
+++ b/deliverables/pike/puppet-glance.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 45bd308020b7a2a5ace23c0df39b0c8b156d2375
     repo: openstack/puppet-glance
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-glance
+    hash: 36065118063ead286f7aae6c8989f4985a7ab630
 team: Puppet OpenStack
 type: other
