--- a/deliverables/pike/puppet-gnocchi.yaml
+++ b/deliverables/pike/puppet-gnocchi.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: acc4303d1b9480532b3b35dc06045d677f467d3e
     repo: openstack/puppet-gnocchi
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-gnocchi
+    hash: 0f2440227662fc113180bd438701d71629e2f88f
 team: Puppet OpenStack
 type: other
