--- a/deliverables/pike/puppet-heat.yaml
+++ b/deliverables/pike/puppet-heat.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 9cdeadec8c4b750ecb2e344458f18cc8aa8cb56c
     repo: openstack/puppet-heat
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-heat
+    hash: 441af5bb3f6b3c786e9f41582ffdcf0125f5618d
 team: Puppet OpenStack
 type: other
