--- a/deliverables/pike/puppet-horizon.yaml
+++ b/deliverables/pike/puppet-horizon.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 8e00bbbd1d4cfdd9b4feb10c54c5d84f658fafcc
     repo: openstack/puppet-horizon
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-horizon
+    hash: 219a31f4beb81948ee632876caa651f07abd4e22
 team: Puppet OpenStack
 type: other
