--- a/deliverables/pike/puppet-ironic.yaml
+++ b/deliverables/pike/puppet-ironic.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: f3ec8361fca7aaf18e9277f7bc40fee10f490adc
     repo: openstack/puppet-ironic
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-ironic
+    hash: c5d183308eb59bc3e6a41528e74b3f91a91501c4
 team: Puppet OpenStack
 type: other
