--- a/deliverables/pike/puppet-keystone.yaml
+++ b/deliverables/pike/puppet-keystone.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: f7d70a83343bdbb6138243c7922883f3cb54dfa0
     repo: openstack/puppet-keystone
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-keystone
+    hash: 488a91ff18b6c60cb898b0f31bd8d339da991600
 team: Puppet OpenStack
 type: other
