--- a/deliverables/pike/puppet-magnum.yaml
+++ b/deliverables/pike/puppet-magnum.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 3a3c9102a33d2c19386b88bfe5fb6b2adc2cefb9
     repo: openstack/puppet-magnum
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-magnum
+    hash: 3004b1ea53ebf817f6e1ea3e8de397506bdd2611
 team: Puppet OpenStack
 type: other
