--- a/deliverables/pike/puppet-manila.yaml
+++ b/deliverables/pike/puppet-manila.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: fff658cb6faaaec406c974f2c52428a875a22c71
     repo: openstack/puppet-manila
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-manila
+    hash: 6ac9ba225a6a2f59fa601e147cc496907acae9be
 team: Puppet OpenStack
 type: other
