--- a/deliverables/pike/puppet-mistral.yaml
+++ b/deliverables/pike/puppet-mistral.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 68eb72297a102f48490dfc71eac16d7d52f42aaa
     repo: openstack/puppet-mistral
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-mistral
+    hash: 53d9021996d3e6daa844bda71b2d07deecb93b10
 team: Puppet OpenStack
 type: other
