--- a/deliverables/pike/puppet-murano.yaml
+++ b/deliverables/pike/puppet-murano.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 6c278abde9258969653728f3bc4a10bc2c7c1ec4
     repo: openstack/puppet-murano
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-murano
+    hash: aa12ee45015f561293af461d3b9888f7d846a897
 team: Puppet OpenStack
 type: other
