--- a/deliverables/pike/puppet-neutron.yaml
+++ b/deliverables/pike/puppet-neutron.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 166f65f5ad3de8264142f5a4abe0f03d5bff40e5
     repo: openstack/puppet-neutron
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-neutron
+    hash: 888c480eab625e3f3aee32be818433bc7a4e6d6c
 team: Puppet OpenStack
 type: other
