--- a/deliverables/pike/puppet-nova.yaml
+++ b/deliverables/pike/puppet-nova.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: d19c93c55174246cad28a0aa64e1aeca9f960edb
     repo: openstack/puppet-nova
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-nova
+    hash: 27baec7dd0c92d10dcfba2242593a7149c3e93d2
 team: Puppet OpenStack
 type: other
