--- a/deliverables/pike/puppet-octavia.yaml
+++ b/deliverables/pike/puppet-octavia.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: e1033b6d029757302ebb18cfd62098721ea14ff2
     repo: openstack/puppet-octavia
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-octavia
+    hash: 87d98c5fc9505e693d162b0ead5eab6fa029612e
 team: Puppet OpenStack
 type: other
