--- a/deliverables/pike/puppet-openstack_extras.yaml
+++ b/deliverables/pike/puppet-openstack_extras.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: d0fa1d05f17de19fc5ddc564bfeb92519f57651c
     repo: openstack/puppet-openstack_extras
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-openstack_extras
+    hash: a3e8944d21c4dd9c08b1e55f4c7bd9033d6c7c7c
 team: Puppet OpenStack
 type: other
