--- a/deliverables/pike/puppet-sahara.yaml
+++ b/deliverables/pike/puppet-sahara.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: f75085294bfcab353e7cc22f434475094324f003
     repo: openstack/puppet-sahara
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-sahara
+    hash: ec22ffd56451c0c0109843a9632626180b3e33cb
 team: Puppet OpenStack
 type: other
