--- a/deliverables/pike/puppet-tacker.yaml
+++ b/deliverables/pike/puppet-tacker.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 360fe8f7611e6c36ce9fda3193713f165254f648
     repo: openstack/puppet-tacker
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-tacker
+    hash: 168cf5db319eb23869bad800c80798360549a018
 team: Puppet OpenStack
 type: other
