--- a/deliverables/pike/puppet-tempest.yaml
+++ b/deliverables/pike/puppet-tempest.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 80bf1fb131bbfb92749c27753693881d0cf92df9
     repo: openstack/puppet-tempest
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-tempest
+    hash: b9f84e4d331b69cc626c00e000927973b8c13a7b
 team: Puppet OpenStack
 type: other
