--- a/deliverables/pike/puppet-vswitch.yaml
+++ b/deliverables/pike/puppet-vswitch.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 4c9b3050aebff8f7a3acd826feeb785de6e27664
     repo: openstack/puppet-vswitch
   version: 7.0.0
+- version: 7.1.0
+  projects:
+  - repo: openstack/puppet-vswitch
+    hash: ee4b10535131582d883101b8c63c8ef7252d0259
 team: Puppet OpenStack
 type: other
