--- a/deliverables/pike/puppet-zaqar.yaml
+++ b/deliverables/pike/puppet-zaqar.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 3aff1adcb739c0fe7d03673e6b0edebe25e0dc46
     repo: openstack/puppet-zaqar
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-zaqar
+    hash: 9697f99915d9a0beb7ff16def9703558dba5a78d
 team: Puppet OpenStack
 type: other
