--- a/deliverables/pike/puppet-congress.yaml
+++ b/deliverables/pike/puppet-congress.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 0ad0eb000a3da7ec24f9817e833b94606da787c9
     repo: openstack/puppet-congress
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-congress
+    hash: 0035a37cc654815e420648dee79d16b83a3c4b5a
 team: Puppet OpenStack
 type: other
