--- a/deliverables/pike/puppet-openstacklib.yaml
+++ b/deliverables/pike/puppet-openstacklib.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: f1fa56a5f8f1d5716cc280aee70a533b4fc48503
     repo: openstack/puppet-openstacklib
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-openstacklib
+    hash: c6f6a3f8970cc3a88621015b858c78ac7403b3a4
 team: Puppet OpenStack
 type: other
