--- a/deliverables/pike/puppet-oslo.yaml
+++ b/deliverables/pike/puppet-oslo.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: e05dd0e477035f32edfe240e132b3ef68e6a93a8
     repo: openstack/puppet-oslo
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-oslo
+    hash: 16b7efb0e5a8f5ebb7e7306312f6f235233c3ae9
 team: Puppet OpenStack
 type: other
