--- a/deliverables/pike/puppet-ovn.yaml
+++ b/deliverables/pike/puppet-ovn.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 1ef71d7e2079daa675539aafbcb707ca6ae916d7
     repo: openstack/puppet-ovn
   version: 11.0.0
+- version: 11.1.0
+  projects:
+  - repo: openstack/puppet-ovn
+    hash: dfa22cdc83ab3c354726af78e0a2d7d8bf6f035e
 team: Puppet OpenStack
 type: other
