Cut Pike-2 milestone for neutron projects
Change-Id: I199b85ba1774f015783998517853da890a6e2516

--- a/deliverables/pike/networking-bagpipe.yaml
+++ b/deliverables/pike/networking-bagpipe.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/networking-bagpipe
         hash: 14afcf7aa8e4c34cf2e95496bcd3a3bd73a2c70b
+  - version: 7.0.0.0b2
+    projects:
+      - repo: openstack/networking-bagpipe
+        hash: 4054a1c84f3de7de94f5e5e24bf928d7f5da7399
