--- a/deliverables/pike/networking-bgpvpn.yaml
+++ b/deliverables/pike/networking-bgpvpn.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/networking-bgpvpn
         hash: 26a911a1e6d0334a401720ffc9ae28b8c66bddee
+  - version: 7.0.0.0b2
+    projects:
+      - repo: openstack/networking-bgpvpn
+        hash: 650c37b1429d262cf2bc26036828999fc0b38e7e
