--- a/deliverables/pike/networking-midonet.yaml
+++ b/deliverables/pike/networking-midonet.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/networking-midonet
         hash: 8e0b8e7b4c6ec5c6cb3838978939f730400d523b
+  - version: 5.0.0.0b2
+    projects:
+      - repo: openstack/networking-midonet
+        hash: 210a8d2e7b7db45bf69384bffeff08eaf88dadba
