--- a/deliverables/pike/neutron-dynamic-routing.yaml
+++ b/deliverables/pike/neutron-dynamic-routing.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/neutron-dynamic-routing
         hash: abeee2df89ade38843e3f8226fe25f6d7791b0f8
+  - version: 11.0.0.0b2
+    projects:
+      - repo: openstack/neutron-dynamic-routing
+        hash: e757b7bd7f14537ceedacbc9cfcac5d76c65030e
