--- a/deliverables/pike/neutron-fwaas.yaml
+++ b/deliverables/pike/neutron-fwaas.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/neutron-fwaas
         hash: 462511d09a18c48bdc89fd6dfb0d03bddb407a4a
+  - version: 11.0.0.0b2
+    projects:
+      - repo: openstack/neutron-fwaas
+        hash: 43d6d29f131e16ba15b83922efe40181303422c7
