--- a/deliverables/pike/neutron.yaml
+++ b/deliverables/pike/neutron.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/neutron
         hash: 58cbcc13f7cdcc256bae968075af5ea44b0c42c9
+  - version: 11.0.0.0b2
+    projects:
+      - repo: openstack/neutron
+        hash: fde6710515681a1cbe2a2af33601f01d48a832fd
