--- a/deliverables/pike/networking-odl.yaml
+++ b/deliverables/pike/networking-odl.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/networking-odl
         hash: a07ec7a85532e13673059a7cd74567beee57c95f
+  - version: 11.0.0.0b2
+    projects:
+      - repo: openstack/networking-odl
+        hash: 13ad1ea1feee6f5e6f8ccd9c2676a4c38cfbd8c5
