--- a/deliverables/pike/networking-ovn.yaml
+++ b/deliverables/pike/networking-ovn.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/networking-ovn
         hash: 8a3c12860ca3345c1a9d28d4c2a9bac3bdccb690
+  - version: 3.0.0.0b2
+    projects:
+      - repo: openstack/networking-ovn
+        hash: 95ddb3f7740e1744fc7dcbaa3c9f6490765eb81e
