--- a/deliverables/pike/networking-sfc.yaml
+++ b/deliverables/pike/networking-sfc.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/networking-sfc
         hash: 9027133bb8df43832dfcea0648e7128c3427de13
+  - version: 5.0.0.0b2
+    projects:
+      - repo: openstack/networking-sfc
+        hash: deb86d77b53e6aa1051bb78cd306584802a73a7d
