remove send-announcements-to from fuel and tripleo newton projects
We no longer use the send-announcements-to field for anything.

Change-Id: I2bc730d0ebcce71f0883a654e50438481628ab51
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/newton/os-cloud-config.yaml
+++ b/deliverables/newton/os-cloud-config.yaml
@@ -3,7 +3,7 @@ launchpad: os-cloud-config
 team: tripleo
 type: other
 release-model: cycle-with-milestones
-send-announcements-to: openstack-announce@lists.openstack.org
+artifact-link-mode: none
 branches:
   - name: stable/newton
     location: 5.0.0
