--- a/deliverables/newton/tripleo-quickstart.yaml
+++ b/deliverables/newton/tripleo-quickstart.yaml
@@ -2,7 +2,7 @@
 launchpad: tripleo
 team: tripleo
 type: other
-send-announcements-to: openstack-announce@lists.openstack.org
+release-model: cycle-trailing
 releases:
   - version: 1.0.0
     projects:
