--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -88,3 +88,85 @@ releases:
         hash: a7eb80f9a3836c063ed4c0f2a088beb956d8085e
       - repo: openstack/openstack-ansible-os_molteniron
         hash: a80e50d65ad91ee6b69125fd884139b52ae703a6
+  - version: 16.0.0.0b2
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: 96cfe51d420ec56709033719d689b23935756c9d
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: 2be5763f6937f1791ea3c99ade4386c89d5ad8a6
+      - repo: openstack/openstack-ansible-pip_install
+        hash: 1bd49f3201d511a841dc79b1dc9ad83c15de808a
+      - repo: openstack/openstack-ansible-galera_client
+        hash: fba14dd2059f198753f4aff49e9df44c66d4e780
+      - repo: openstack/openstack-ansible-galera_server
+        hash: e05b6a85f2476ad5761867051c5761c756a17dcd
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: f8b5f7ed90d149e84ada05a0b5a3a44afaff344b
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: 51a35bb25d4654bc20fd590100f0f0fb73524cf0
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: 64261a0c192f43a6f8338eba49acb46b91c31833
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: 95d03caaa3cb53fb4119016079d5e4fd8bcbadca
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: a25aa31ccf0089229ac9c31c05ebc0640abebd37
+      - repo: openstack/openstack-ansible-security
+        hash: 1f89531fb821bc7fccf06089e7dfd9929df88cf8
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: 595a3c4f35341d537fe112d979f4f080122b2e21
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: 13b3a270d98536ae8f13359b974857b13c395557
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: 8ad46e857d38e4fb30f3c2c49b6b4c55a4cf158d
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: 8c72de83a728a14111b76a8582fdc5723946d689
+      - repo: openstack/openstack-ansible-os_barbican
+        hash: ed8e52b82055dffa0e3403400deb6f188c62b93c
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: 3f1a5729abfc9b37ab3be2d468d748f63f9660cf
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: 49435e21fee0f227eaa6c5a3992a836d6abf0621
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 384215e4560e358ccb7ede9c0e5e1523c29cee26
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: 1f286a89e1b948a60514a333a5ad7e845b48afef
+      - repo: openstack/openstack-ansible-os_heat
+        hash: d6c23fa6b04c3737389cf06bdd115dad52b1d610
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: f3cac1b5c46f562d4289a950426a9626332b9125
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: 935fde61e0da928e879f92a3f7b2fc317a040b29
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: 15aecbbd9a59d9867d74a2f831f8816aad25d97e
+      - repo: openstack/openstack-ansible-os_trove
+        hash: 9855742abdf542d135d83ebd3072890b16d18af4
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: fcc1aa8792a8687ad66f0e8717a8ecee97bded64
+      - repo: openstack/openstack-ansible-os_nova
+        hash: 08a7da5f372d75ecf130da1a424790a0c3de1dc3
+      - repo: openstack/openstack-ansible-os_rally
+        hash: a1ca8da03c2c9289f670b01a10addca689bffaff
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: ac72d9ab8e1a901ba1ffb3c2eb24f9d6c3bce11d
+      - repo: openstack/openstack-ansible-os_swift
+        hash: 5de40ebea40a81148ec1f5ab903902f3ebe0920b
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: e3974d45c0bedc9e9449c462f4c49c2d1f0ce6a2
+      - repo: openstack/openstack-ansible-plugins
+        hash: 573c8a84800f5bf1994b5f5e6490054f89a9ca31
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: abaca366186b503c5afd7b9ff9741f37a406a3fe
+      - repo: openstack/openstack-ansible-repo_build
+        hash: a0ca13626ae85b500af3838ba8c8c3c664fded30
+      - repo: openstack/openstack-ansible-repo_server
+        hash: 05fee07110e39af55b41069c8b9e35a328e8d63f
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: a7405329cdab24c02c86d776e1154b96be7951ae
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: 0b914b6bd133ca657c2ba38455d80c207c868103
+      - repo: openstack/openstack-ansible-os_designate
+        hash: c505653af5c7b1d880dd9a31759f3a1bade69ed3
+      - repo: openstack/openstack-ansible-os_octavia
+        hash: 2eb17d626032a76b13098d4ec4be6ececb41e6b6
+      - repo: openstack/openstack-ansible-os_molteniron
+        hash: f487af10c2caef009e64b020501715b30094958b
