[heat] ocata and newton stable release
release 8.0.2 and 7.0.4

Change-Id: I513a8fda737a63d003b0b57f78680bede42e3db2

--- a/deliverables/newton/heat.yaml
+++ b/deliverables/newton/heat.yaml
@@ -45,3 +45,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: d9979236d9082a64d6afa6b868467173f1bc7c28
+  - version: 7.0.4
+    projects:
+      - repo: openstack/heat
+        hash: 65339f57ca56113b9b17a57119aac1804269333d
