--- a/deliverables/ocata/heat.yaml
+++ b/deliverables/ocata/heat.yaml
@@ -37,3 +37,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: e2a317a6ab48ab500b645266afcb57c6319e37b4
+  - version: 8.0.2
+    projects:
+      - repo: openstack/heat
+        hash: b98af9d4646ecae2269ec9459a824d2c733a1e75
