[heat] release heat pike-2
Change-Id: I93d463fcc35cff38189eb67b290244f79b109717

--- a/deliverables/pike/heat.yaml
+++ b/deliverables/pike/heat.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: e555ef99fd8ed7b6cfa6e16bec22e67a8f0c71f8
+  - version: 9.0.0.0b2
+    projects:
+      - repo: openstack/heat
+        hash: 93a446a9650c9e7e35a73353840694ae01e73280
