Add murano pike-2 deliverables
Change-Id: I6e647ad78521c7eade955245906f94f897bc76ee

--- a/deliverables/pike/murano-dashboard.yaml
+++ b/deliverables/pike/murano-dashboard.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/murano-dashboard
         hash: c7ac310af958063d74b4a918f83d0232fff8f6ce
+  - version: 4.0.0.0b2
+    projects:
+      - repo: openstack/murano-dashboard
+        hash: 733dbf01866214acc9d122ba3b3b2e1cf809257e
