--- a/deliverables/pike/murano.yaml
+++ b/deliverables/pike/murano.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/murano
         hash: e7e8167d2f84d5f3ce11a55ca1e36c6a2e06bf8c
+  - version: 4.0.0.0b2
+    projects:
+      - repo: openstack/murano
+        hash: de887f73b29ab71412eb5b5e31c1c81f941e447e
