[heat] release python-heatclient 1.9.1
Change-Id: I2dc6a2f04a077638d0e85a81c02db8181f28c6dc

--- a/deliverables/pike/python-heatclient.yaml
+++ b/deliverables/pike/python-heatclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-heatclient
         hash: b80166d848dd26718cfe0627bfec22774213616b
+  - version: 1.10.0
+    projects:
+      - repo: openstack/python-heatclient
+        hash: 847f9023377b93fc0636309d44ff636fb111d66c
