[heat] release heat-agents 1.1.1
Change-Id: If5de31b98982011e09ce10c91f81667554c8ca34

--- a/deliverables/pike/heat-agents.yaml
+++ b/deliverables/pike/heat-agents.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/heat-agents
         hash: 251d7ab69591e444e7329c114f81bccfaed764d0
+  - version: 1.2.0
+    projects:
+      - repo: openstack/heat-agents
+        hash: 887f06ab4c6248b0ce1a4873ce9b1319943c6e3b
