--- a/deliverables/pike/python-muranoclient.yaml
+++ b/deliverables/pike/python-muranoclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-muranoclient
 release-model: cycle-with-intermediary
 team: murano
 type: library
+releases:
+  - version: 0.13.0
+    projects:
+      - repo: openstack/python-muranoclient
+        hash: cae67a4c1e16b84835fcdcba59bcac5344f98aa9
