tag trove pike b2
Change-Id: I487e32b0b31dfbe22dfaf98efbc0bf5c4ab625fc

--- a/deliverables/pike/trove.yaml
+++ b/deliverables/pike/trove.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/trove
         hash: 33713436134915b74ed101027eda18b9887d3f16
+  - version: 8.0.0.0b2
+    projects:
+      - repo: openstack/trove
+        hash: c5d5007d18bd43555804ac91a550d055efcd8ddb
