tag trove-dashboard pike b2
Change-Id: Ib611cc6b00f7d1325681cbca11ad4a79a219d9ea

--- a/deliverables/pike/trove-dashboard.yaml
+++ b/deliverables/pike/trove-dashboard.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/trove-dashboard
         hash: 071394c2fd6ca3bd9cb455e053d697c4f2b9a632
+  - version: 9.0.0.0b2
+    projects:
+      - repo: openstack/trove-dashboard
+        hash: 468b8984d932dd3bd664034d9fa973d2a217f1a5
