tag trove client pike b2
Change-Id: I5adfc81221727c48796e0df13b9a05060b278d3e

--- a/deliverables/pike/python-troveclient.yaml
+++ b/deliverables/pike/python-troveclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-troveclient
         hash: d3bb6c32297bd72d9983b24e6a847360f88031fc
+  - version: 2.10.0
+    projects:
+      - repo: openstack/python-troveclient
+        hash: 70da3725f4653084697d2fbbe42a997e87e0ed45
