--- a/deliverables/ocata/magnum.yaml
+++ b/deliverables/ocata/magnum.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/magnum
         hash: 7be95f28db6c796f385f6ea31652aaf4790b67ec
+  - version: 4.1.2
+    projects:
+      - repo: openstack/magnum
+        hash: bdddbdf2defd5b8cd4996ee6163746571146ea7c
