--- a/deliverables/pike/cinder.yaml
+++ b/deliverables/pike/cinder.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/cinder
         hash: 6fe71ea5044e9ca3b15f2c10ebe92c4c234aae30
+  - version: 11.0.0.0b2
+    projects:
+      - repo: openstack/cinder
+        hash: ad546570266d04e1435d74d3d0483f962ea7c8cd
