--- a/deliverables/pike/searchlight.yaml
+++ b/deliverables/pike/searchlight.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/searchlight
         hash: cb62c9997a5dbd3617adcd2d735e9deef7ab5e22
+  - version: 3.0.0.0b2
+    projects:
+      - repo: openstack/searchlight
+        hash: 9485fa38bb36094d2462310856cc615cac43a050
