--- a/deliverables/pike/searchlight-ui.yaml
+++ b/deliverables/pike/searchlight-ui.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/searchlight-ui
         hash: b3a5179896e654468f78757070f474a7ca7f2cf0
+  - version: 3.0.0.0b2
+    projects:
+      - repo: openstack/searchlight-ui
+        hash: b3a5179896e654468f78757070f474a7ca7f2cf0
