--- a/deliverables/pike/neutron-lbaas-dashboard.yaml
+++ b/deliverables/pike/neutron-lbaas-dashboard.yaml
@@ -12,3 +12,10 @@ releases:
     highlights: |-
       * Improved installation documentation
       * Additional translation updates
+  - version: 3.0.0.0b2
+    projects:
+      - repo: openstack/neutron-lbaas-dashboard
+        hash: 81b0717cf0046ff762256da3f57ecb4658d23400
+    highlights: |-
+      * Bug fixes
+      * Additional translation updates
