--- a/deliverables/pike/neutron-lbaas.yaml
+++ b/deliverables/pike/neutron-lbaas.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/neutron-lbaas
         hash: 8a4708044c6ca23bda728eddf7f14302463928fa
+  - version: 11.0.0.0b2
+    projects:
+      - repo: openstack/neutron-lbaas
+        hash: 55e6c6f87afca5651fad3906c91b903c6ccdbd46
