Tag the vitrage deliverables for stable/ocata
Change-Id: I50d0823a316190461fe996ceacb296dde9678ae1

--- a/deliverables/ocata/vitrage.yaml
+++ b/deliverables/ocata/vitrage.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/vitrage
         hash: 3de26c8b3b995fa61ac4ef6d7c26dff78b2efa3e
+  - version: 1.5.2
+    projects:
+      - repo: openstack/vitrage
+        hash: 14eb7057df335dbbf8d5ae723b634bfdd12345e9
