--- a/deliverables/ocata/python-vitrageclient.yaml
+++ b/deliverables/ocata/python-vitrageclient.yaml
@@ -17,3 +17,7 @@ releases:
     projects:
       - repo: openstack/python-vitrageclient
         hash: 11e97cc0c6bd709f6c7c5367c596c2a4d7ca2daf
+  - version: 1.1.2
+    projects:
+      - repo: openstack/python-vitrageclient
+        hash: 41beaa35c237b41a7b10a9e044322fd6483d08be
