--- a/deliverables/pike/python-karborclient.yaml
+++ b/deliverables/pike/python-karborclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-karborclient
 release-model: cycle-with-intermediary
 team: karbor
 type: library
+releases:
+- version: 0.3.0
+  projects:
+  - repo: openstack/python-karborclient
+    hash: cd75dda7bba1875258bb113cfc61efc6d5cd2e3c
