--- a/deliverables/pike/python-watcherclient.yaml
+++ b/deliverables/pike/python-watcherclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-watcherclient
         hash: 723d39cd65e554ac1a98f30dbee7db77ed346a04
+  - version: 1.2.0
+    projects:
+      - repo: openstack/python-watcherclient
+        hash: 5cbce9fb204b7f14f8be0b0497033865724875f1
