--- a/deliverables/pike/watcher-dashboard.yaml
+++ b/deliverables/pike/watcher-dashboard.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/watcher-dashboard
         hash: 69821a61ec48195ba8229d9090317dda42c62ac2
+  - version: 1.2.0
+    projects:
+      - repo: openstack/watcher-dashboard
+        hash: 87243e036584b8910c8a79523aefc428aabda7f7
