--- a/deliverables/pike/solum.yaml
+++ b/deliverables/pike/solum.yaml
@@ -3,3 +3,8 @@ launchpad: solum
 release-model: cycle-with-intermediary
 team: solum
 type: service
+releases:
+  - version: 5.3.0
+    projects:
+      - repo: openstack/solum
+        hash: 118aad77a340d2fb6a0fe569c1504636a7f67b28
