--- a/deliverables/pike/watcher.yaml
+++ b/deliverables/pike/watcher.yaml
@@ -9,3 +9,8 @@ releases:
       - repo: openstack/watcher
         hash: dbff4326e3ec942c06c429485e9f04ac5737f4c1
         tarball-base: python-watcher
+  - version: 1.2.0
+    projects:
+      - repo: openstack/watcher
+        hash: d7a44739a6dae8f4a6fa66408d46dad9b6fd8262
+        tarball-base: python-watcher
