--- a/deliverables/pike/python-solumclient.yaml
+++ b/deliverables/pike/python-solumclient.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/python-solumclient
         hash: 527768afdaebe63fb49dde95230ea9f9ab7f9909
+  - version: 2.4.0
+    projects:
+      - repo: openstack/python-solumclient
+        hash: 7880ffffa872f6e6a1d7629fc389e5eb15f45194
