Senlin pike-2 milestone
Change-Id: Iff5386cf8ff41c5e2a932b3505d956c5ec934e51

--- a/deliverables/pike/senlin.yaml
+++ b/deliverables/pike/senlin.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/senlin
         hash: 8220272a22f7301a682a25d62f592c4f0520a709
+  - version: 4.0.0.0b2
+    projects:
+      - repo: openstack/senlin
+        hash: 4189315757bb30e38a08c2956d0cc49204f2eaf3
