--- a/deliverables/pike/glance.yaml
+++ b/deliverables/pike/glance.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 92127ab9cf00af4ca96b2f3cfb0620dd9e47d335
+  - version: 15.0.0.0b2
+    projects:
+      - repo: openstack/glance
+        hash: 40a9e61f5710d1975c134f220d5f8d5ae4c760fc
