--- a/deliverables/pike/keystoneauth.yaml
+++ b/deliverables/pike/keystoneauth.yaml
@@ -15,3 +15,8 @@ releases:
   - repo: openstack/keystoneauth
     hash: 6cbd95bb8dd3cf1ec110f6e66ee743d5d8507fbc
     tarball-base: keystoneauth1
+- version: 2.21.0
+  projects:
+  - repo: openstack/keystoneauth
+    hash: 0be140389bcbb2df44840af921ea8cb4f1a231d5
+    tarball-base: keystoneauth1
