--- a/deliverables/pike/paunch.yaml
+++ b/deliverables/pike/paunch.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/paunch
         hash: 82d6ff40fd8b5c061935053be5c6199f09f6dd2a
+  - version: 1.2.0
+    projects:
+      - repo: openstack/paunch
+        hash: c8e22e55af4a844bd380689b541f7d9b9504ef63
