--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: f808cfa65a6aa699c5c15c9560c268b046ca7d3e
     repo: openstack/puppet-tripleo
   version: 7.0.0
+- version: 7.1.0
+  projects:
+  - repo: openstack/puppet-tripleo
+    hash: 1041ef2305c0261608d52ad9c727667be4e76d99
 team: tripleo
 type: other
