--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 3e072ced3147aef3a24e151d20063e5a2bc1ada0
     repo: openstack/tripleo-puppet-elements
   version: 7.0.0.0b1
+- version: 7.0.0.0b2
+  projects:
+  - repo: openstack/tripleo-puppet-elements
+    hash: 25e08b32546474ef327e2e93a75693bb18ed979c
 team: tripleo
 type: other
