--- a/deliverables/pike/tripleo-ui.yaml
+++ b/deliverables/pike/tripleo-ui.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 48d40b8eab5ece79b9c5ebc6401819825c309a23
     repo: openstack/tripleo-ui
   version: 7.0.0
+- version: 7.1.0
+  projects:
+  - repo: openstack/tripleo-ui
+    hash: 0d25eb2b853271feae637fbeedc8fccfd1dae0c7
 team: tripleo
 type: other
