--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 27d43fffff56de18884db5bab1f84eec507a7e12
     repo: openstack/python-tripleoclient
   version: 7.0.0
+- version: 7.1.0
+  projects:
+  - repo: openstack/python-tripleoclient
+    hash: be2a20637a2f9726c2b3336306d7f501c988aa8e
 team: tripleo
 type: library
