--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -6,5 +6,9 @@ releases:
   - hash: 65a52d662abc5cab1fbd2ce6248421a22c2b6d76
     repo: openstack/tripleo-validations
   version: 7.0.0
+- version: 7.1.0
+  projects:
+  - repo: openstack/tripleo-validations
+    hash: f3b1e39f9443dfdc068f46273f921f3e8e5c1662
 team: tripleo
 type: other
