--- a/deliverables/pike/freezer.yaml
+++ b/deliverables/pike/freezer.yaml
@@ -12,3 +12,11 @@ releases:
         hash: 3ea8f90881d10958fb0de0a7e13fca20ef2b8415
       - repo: openstack/freezer-dr
         hash: 6602452386a67563543dcd3f7e01a9d99b6cb7a0
+  - version: 5.0.0.0b2
+    projects:
+      - repo: openstack/freezer
+        hash: fb8357ef56f9e01310d93cad73eb88797423b7cb
+      - repo: openstack/freezer-api
+        hash: 746dae2f7b194a2b76b36b2d16292833d76a441c
+      - repo: openstack/freezer-dr
+        hash: 4d11ee77d320ca2d87e12342f472427b0cc2753a
