--- a/deliverables/pike/freezer-web-ui.yaml
+++ b/deliverables/pike/freezer-web-ui.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/freezer-web-ui
         hash: b5ef5893d580dd441160fad08f93da88a1bb1da3
+  - version: 5.0.0.0b2
+    projects:
+      - repo: openstack/freezer-web-ui
+        hash: bd2b8b52febcd7df328d18e7d52572e0e83de23b
