--- a/deliverables/pike/python-freezerclient.yaml
+++ b/deliverables/pike/python-freezerclient.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/python-freezerclient
         hash: 4405255bee3bb78fa4082cbe4bc0913d3d3c29bc
+  - version: 1.4.1
+    projects:
+      - repo: openstack/python-freezerclient
+        hash: a22fbf5dde73074bb5c3ce67ec57600f9774df1a
