Tag Horizon 12.0.0.0b2 (Pike Milestone 2)
Change-Id: I5cb2f17de68f0566bd4c041efb6e613037f0aded

--- a/deliverables/pike/horizon.yaml
+++ b/deliverables/pike/horizon.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: 5d5dcf3e9efc615e203134b6be63d75710d6f630
+  - version: 12.0.0.0b2
+    projects:
+      - repo: openstack/horizon
+        hash: 945a9a816ff9c474b90d86a1c2b2e97086322d4f
