--- a/deliverables/pike/manila.yaml
+++ b/deliverables/pike/manila.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/manila
         hash: 8026623c50f6f45eb4366dac2d36f6b1790ef273
+  - version: 5.0.0.0b2
+    projects:
+      - repo: openstack/manila
+        hash: 2ed496dff1ca4a6d88c0fce6610bc912ab1858de
