--- a/deliverables/pike/manila-ui.yaml
+++ b/deliverables/pike/manila-ui.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/manila-ui
         hash: fe08a0f4942fe015f1ad559e36b0b3474439c6a1
+  - version: 2.9.0
+    projects:
+      - repo: openstack/manila-ui
+        hash: eabfe06f116f574a9aa36e9a218d8df3fd322f98
