--- a/deliverables/pike/python-manilaclient.yaml
+++ b/deliverables/pike/python-manilaclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-manilaclient
         hash: b4f71709dc4644b069c3395260c8e318907cfb7c
+  - version: 1.16.0
+    projects:
+      - repo: openstack/python-manilaclient
+        hash: 652d31cb6c5a1f42f0bddb9a5b71597f9ba74354
