request P2 release of congress and dashboard
Change-Id: I016c35223672d9c2aa6665486ee8ae1eea42a062

--- a/deliverables/pike/congress.yaml
+++ b/deliverables/pike/congress.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/congress
         hash: 13a58362b51abfe80ce262e8c0251ea37898dde0
+  - version: 6.0.0.0b2
+    projects:
+      - repo: openstack/congress
+        hash: 9fc1d330e5e81a9559d70e67119b412d48af56ac
