Tagging Sahara Pike-2 release
Change-Id: Id4c586ee9e2547016e1ee748ed7875cb25e99627

--- a/deliverables/pike/sahara.yaml
+++ b/deliverables/pike/sahara.yaml
@@ -14,3 +14,13 @@ releases:
         hash: 69f1cb091098b7635bebc77ec6fa004dd387f2b3
       - repo: openstack/sahara-image-elements
         hash: 2113ac486199414635381eaf8a6573089e171a8f
+  - version: 7.0.0.0b2
+    projects:
+      - repo: openstack/sahara
+        hash: 1145384acf7553e6de1f486b3a50cdcc38e8cad8
+      - repo: openstack/sahara-dashboard
+        hash: 25c5c7501eb4de100bb638f1239b4c3377129fcf
+      - repo: openstack/sahara-extra
+        hash: 70090c2a9445be9b7c4778f491b9b098f2ccfbd9
+      - repo: openstack/sahara-image-elements
+        hash: d0bfaa0fa9bbb4e5c4ade266a22f1eaf5dd344ed
