--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: ae637e70a72166067e09f3bbc3acb54e5d92771e
+  - version: 16.0.0.0b2
+    projects:
+      - repo: openstack/nova
+        hash: 5a157a229a546ebc73beca01f5d9ed105c362eaa
