--- a/deliverables/pike/keystone.yaml
+++ b/deliverables/pike/keystone.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: 968575a0e5ae3945e473f442488e3701fb30e6cf
+  - version: 12.0.0.0b2
+    projects:
+      - repo: openstack/keystone
+        hash: c528539879e824b8e6d5654292a85ccbee6dcf89
