--- a/deliverables/pike/mistral.yaml
+++ b/deliverables/pike/mistral.yaml
@@ -13,3 +13,11 @@ releases:
         hash: 15303de98ccab7177a778bc0dba070267d32711b
       - repo: openstack/mistral-extra
         hash: d53b7ccc41260427432ae9f971748b5ae00103fa
+  - version: 5.0.0.0b2
+    projects:
+      - repo: openstack/mistral
+        hash: 8d5175300b1bfef4417f28512d2e8ff9e8419644
+      - repo: openstack/mistral-dashboard
+        hash: e63dbfc33a44402c71b154c3aa2b50434c05b00e
+      - repo: openstack/mistral-extra
+        hash: f157dbca85618a8bed3bed6d43b4400fab0a9dd0
