Pike: release keystoneclient 3.11.0
Change-Id: If870b0f46cf6f51043e286bb3111ee150d0a95e7

--- a/deliverables/pike/python-keystoneclient.yaml
+++ b/deliverables/pike/python-keystoneclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-keystoneclient
 release-model: cycle-with-intermediary
 team: keystone
 type: library
+releases:
+- version: 3.11.0
+  projects:
+  - repo: openstack/python-keystoneclient
+    hash: daa99ed5fe1df548c26feff68b45bda7ac94ea25
