--- a/deliverables/pike/barbican.yaml
+++ b/deliverables/pike/barbican.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/barbican
         hash: 2948a004d633e66251c7c0b65fdd3f09c4d654ac
+  - version: 5.0.0.0b2
+    projects:
+      - repo: openstack/barbican
+        hash: 6fdead95937dcc7975bee53ea514cc3e40ce9e6f
