Pike: release ceilometerclient 2.9.0
Change-Id: I14270a5d6787bb64a1b018270fdf70f0d181a376

--- a/deliverables/pike/python-ceilometerclient.yaml
+++ b/deliverables/pike/python-ceilometerclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-ceilometerclient
 release-model: cycle-with-intermediary
 team: Telemetry
 type: library
+releases:
+  - version: 2.9.0
+    projects:
+      - repo: openstack/python-ceilometerclient
+        hash: 3b4e35abada626ce052f20d55c71fe12ab77052a
