--- a/deliverables/pike/python-octaviaclient.yaml
+++ b/deliverables/pike/python-octaviaclient.yaml
@@ -11,3 +11,9 @@ releases:
         hash: 970a232dc09e5142b5383bb3565b859568115e6c
     highlights: |-
       * Added loadbalancer list command
+  - version: 1.0.0
+    projects:
+      - repo: openstack/python-octaviaclient
+        hash: f99e89247a26fe0a3a8292e4563f75dbc702ff8d
+    highlights: |-
+      * Most commands are now complete
