request congress client release
Change-Id: Ie624a0e618f9e461952e0d4def0897b10b279b4a

--- a/deliverables/pike/python-congressclient.yaml
+++ b/deliverables/pike/python-congressclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-congressclient
 release-model: cycle-with-intermediary
 team: congress
 type: library
+releases:
+  - version: 1.7.0
+    projects:
+      - repo: openstack/python-congressclient
+        hash: 5fc1bab873627fe793d9f2d0f6c0030d29718646
