--- a/deliverables/pike/zaqar.yaml
+++ b/deliverables/pike/zaqar.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/zaqar
         hash: 5b7c69fab973f502aecf00b28e4fa114dbb64d13
+  - version: 5.0.0.0b2
+    projects:
+      - repo: openstack/zaqar
+        hash: 51299ba1eca22462c5560854f53b668ad7872ac7
