--- a/deliverables/pike/zaqar-ui.yaml
+++ b/deliverables/pike/zaqar-ui.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/zaqar-ui
         hash: 1df16a1ef19fa74ee02d6cdd92699bf6c852b684
+  - version: 3.0.0.0b2
+    projects:
+      - repo: openstack/zaqar-ui
+        hash: 6bcdf8efb1491d9253c679802659c80d3df33151
