--- a/deliverables/pike/python-zaqarclient.yaml
+++ b/deliverables/pike/python-zaqarclient.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/python-zaqarclient
         hash: 6f8384e2b5ecd7d19b6208cf5d35a31a021b652d
+  - version: 1.6.0
+    projects:
+      - repo: openstack/python-zaqarclient
+        hash: 6f4b6e30ad267ec94575ec5f67b785c603d6ff2b
