--- a/deliverables/pike/tricircle.yaml
+++ b/deliverables/pike/tricircle.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/tricircle
         hash: e88f7588d929a799009a9502db19d05f89a06c7b
+  - version: 3.3.0
+    projects:
+      - repo: openstack/tricircle
+        hash: 9bffb43330eb07489b08a56e026277bd1abcf58f
